--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Start Card 1 -->
     <div class="container1">
       <div class="user1">
-        <img src="images/image-daniel.jpg">
+        <img src="images/image-daniel.jpg" alt="">
         <strong>Daniel Clifford</strong><br>
         <small>Verified Graduate</small>
       </div>
@@ -47,7 +47,7 @@
     <!-- Start Card 2 -->
     <div class="container2">
       <div class="user2">
-        <img src="images/image-jonathan.jpg">
+        <img src="images/image-jonathan.jpg" alt="">
         <strong>Jonathan Walters</strong><br>
         <small>Verified Graduate</small>
       </div>
@@ -64,7 +64,7 @@
     <!-- Start Card 3 -->
     <div class="container3">
       <div class="user3">
-        <img src="images/image-jeanette.jpg">
+        <img src="images/image-jeanette.jpg" alt="">
         <strong>Jeanette Harmon</strong><br>
         <small>Verified Graduate</small>
       </div>
@@ -81,7 +81,7 @@
     <!-- Start Card 4 -->
     <div class="container4">
       <div class="user4">
-        <img src="images/image-patrick.jpg">
+        <img src="images/image-patrick.jpg" alt="">
         <strong>Patrick Abrams</strong><br>
         <small>Verified Graduate</small>
       </div>
@@ -101,7 +101,7 @@
     <!-- Start Card 5 -->
     <div class="container5">
       <div class="user5">
-        <img src="images/image-kira.jpg">
+        <img src="images/image-kira.jpg" alt="">
         <strong>Kira Whittle</strong><br>
         <small>Verified Graduate</small>
       </div>
